- added upgrade from varbound constraints to set-packing constraints
- added SCIPwriteCliqueGraph() to scip.{c,h} to write the clique graph in GML format into a given file
- added upgrade from bounddisjunction constraints to set-packing/logicor constraints

interface
- SCIPcalcMIR() gets an additional parameter "cutrank" which returns the rank of the aggregation; via SCIProwChgRank()
  the rank of a cut can be changed (deafult rank is 0)

SCIP version 3.0.1
==================

fixed bugs:
- fixed bug when adding linear constraints with non active variables in solving process, during propagation this
  resulted in changing the row, which is not possible for unmodifiable constraints/locked rows
- fixed bug in copying nonlinear constraints during presolve (nonlinear part was not copied)
- fixed issue with deleting varbound constraints in case the bound change was not applied
- fixed small issue in pseudo objective propagator w.r.t. propagating the lower bound globally
- fixed issue with applying the effective root depth during the search
- fixed bugs in parsing dis-/conjunctive constraints
- fixed minor bug in conjunctive constraint handler printing wrong constraint
- fixed bug in disjunctive constraint handler when enforcing a constraint
- fixed bug with handling of empty logicor and bounddisjunction constraints
- fixed bug which disabled iteration limit in SCIPlpSolveAndEval()
- fixed bug in cumulative constraint handler w.r.t. getting active variables
- fixed bug concerning usage of dualbound and lowerbound
- fixed bug trying to color probing nodes, which are not added to the vbc output anymore
- fixed bug in sorting template
- fixed bug in cons_orbitope: in rare cases one cannot repropagate
- fixed behaviour change of indicator constraint handler when solving a another instance after solving a one using the
  interactive shell
- fixed bug of wrong result code in propagation in prop_genvbound.c

features: