@@ -1186,6 +1186,8 @@ SCIP_RETCODE solveNodeInitialLP(
    SCIP_Bool*            lperror             /**< pointer to store whether an unresolved error in LP solving occured */
    )
 {
+   SCIP_Real starttime = 0.0;
+
    assert(stat != NULL);
    assert(tree != NULL);
    assert(lp != NULL);
@@ -1207,11 +1209,18 @@ SCIP_RETCODE solveNodeInitialLP(
    SCIP_CALL( SCIPtreeLoadLPState(tree, blkmem, set, stat, eventqueue, lp) );
 
    /* solve initial LP */
+   starttime = SCIPclockGetTime(stat->solvingtime);
    SCIPdebugMessage("node: solve initial LP\n");
    SCIP_CALL( SCIPlpSolveAndEval(lp, set, messagehdlr, blkmem, stat, eventqueue, eventfilter, prob,
          SCIPnodeGetDepth(SCIPtreeGetFocusNode(tree)) == 0 ? set->lp_rootiterlim : set->lp_iterlim, TRUE, TRUE, FALSE, lperror) );
    assert(lp->flushed);
    assert(lp->solved || *lperror);
+
+   /* save time for very first LP in root node */
+   if ( stat->nnodelps == 0 && SCIPnodeGetDepth(SCIPtreeGetFocusNode(tree)) == 0 )
+   {
+      stat->firstlptime = SCIPclockGetTime(stat->solvingtime) - starttime;
+   }
 
    /* remove previous primal ray, store new one if LP is unbounded */
    SCIP_CALL( updatePrimalRay(blkmem, set, stat, prob, primal, tree, lp, *lperror) );
